# cafer

./: .travis.yml  CMakeLists.txt  README.md  README.md~  package.xml  setup.py
ROS/conf/: cafer.launch
ROS/src/: getid.cpp  launch_node.cpp  node_manager.cpp
action/: WriteData.action
example/: README.md  basic_example_change_frequency.cpp  basic_example_kill_node_topic_type.cpp  basic_example_launch_set_nodes.cpp  basic_example_new_node.cpp  data_manager_example.cpp  data_publisher_example.cpp  db_manager_example.cpp  managermap_example.cpp  managermap_example.launch  managerqueue_example.cpp  managerqueue_example.launch
example_python/: README.md  basic_example_launch_set_nodes.py
include/cafer_core/: aliases.hpp  cafer_core.hpp  component.hpp  data.hpp  db_manager.hpp  manager.hpp  supervisor.hpp
include/cafer_core/db_manager/: _db_filesystem.hpp  _wave.hpp  _write_worker.hpp  db_filesystem.hpp  db_manager.hpp
launch/: basic_example_launch_set_nodes_python.launch  cafer.launch  data_manager_example.launch
mdb/: README.md  README.md~
mdb/cafer_mdb/: CMakeLists.txt  CMakeLists.txt~  package.xml~
mdb/cafer_mdb/launch/: cafer_mdb_node.launch  cafer_mdb_node.launch~  cafer_mdb_test.launch~
mdb/cafer_mdb/src/: cafer_mdb_node.cpp  cafer_mdb_node.cpp~  cafer_mdb_test.cpp
mdb/rosmdb/: ._cafer_rosmdb.launch  CMakeLists.txt  build.gradle  package.xml  settings.gradle
mdb/rosmdb/__door/: CoinCollectorSimple-Config.xml  MDB-Config-sim.xml  MDB-Config-sim.xml~  MDB-Config-template.xml  MDB-Config.xml  behaviourModel.properties  rewardModel.properties  rewardModel2.properties  rewardModel3.properties  rewardModel4.properties  rewardModel5.properties  rewardModel6.properties  rewardModel7.properties  rewardModel8.properties
mdb/rosmdb/__door/_behaviourModel/: id.xml  neatid.xml
mdb/rosmdb/__door/_rewardModel/: id.xml  neatid.xml
mdb/rosmdb/__door/_rewardModel2/: id.xml  neatid.xml
mdb/rosmdb/__door/_rewardModel3/: id.xml  neatid.xml
mdb/rosmdb/__door/_rewardModel4/: id.xml  neatid.xml
mdb/rosmdb/__door/_rewardModel5/: id.xml  neatid.xml
mdb/rosmdb/launch/: cafer_rosmdb.launch  rosmdb_rosmdb.launch  rosmdb_rossimulation.launch
mdb/rosmdb/log/: latest
mdb/rosmdb/rosmdb/: build.gradle~
msg/: DBManager.msg  db_manager_status.msg
msg/db_manager/: db_manager_request.msg  db_manager_status.msg
sferes/: README.md
sferes/exp/example_cafer_fastsim/: arena1.pbm  arena2.pbm  arena3.pbm  fastsim_ns.launch  obstacle_avoidance.cpp  obstacle_avoidance_envoa1.cpp  obstacle_avoidance_envoa1_no_parallel.cpp  phen_dnn.hpp  wscript
sferes/modules/ros_binding/: ros.py  wscript
sferes/modules/sferes_cafer/: README.md~  ros.py  sferes_cafer.cpp  sferes_cafer.hpp  wscript
sferes/modules/sferes_cafer_fastsim/: cafer_fastsim.hpp  fastsim_cafer_to_sferes.hpp  wscript
src/: component.cpp  component_python.cpp  getid.cpp  launch_node.cpp  node_manager.cpp  ros_fastsim
src/cafer_client/: CMakeLists.txt  package.xml
src/cafer_client/src/: cafer_client.cpp  cafer_client.hpp
src/cafer_core/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/cafer_core/example/: README.md  basic_example_change_frequency.cpp  basic_example_kill_node_topic_type.cpp  basic_example_launch_set_nodes.cpp  basic_example_new_node.cpp  data_manager_example.cpp
src/cafer_core/include/cafer_core/: component.hpp  manager.hpp
src/cafer_core/launch/: basic_example_launch_set_nodes.launch  basic_example_new_node.launch  cafer.launch  cafer_client_test.launch  cafer_client_test.launch~
src/cafer_core/msg/: Management.msg  Management.msg~  manager_test.msg
src/cafer_core/src/: component.cpp  component.hpp  getid.cpp
src/cafer_core/src/basic_example/: basic_example_change_frequency.cpp  basic_example_kill_node_topic_type.cpp  basic_example_launch_set_nodes.cpp  basic_example_new_node.cpp
src/cafer_core/test/: component_test.cpp  component_test_chgt_freq_node.cpp  component_test_death.cpp  component_test_death_node.cpp  component_test_launch_death.cpp  component_test_launch_death_tbb.cpp  component_test_node.cpp  manager_component_test.cpp  manager_test.cpp  manager_test_subcribe_node.cpp  manager_test_subscribe.cpp  manager_test_subscribe_node.cpp
src/cafer_core/test_launch/: component_test.launch  component_test_death.launch  component_test_frequency10.launch  component_test_frequency20.launch  component_test_launch_death.launch  component_test_launch_death_dummy_node.launch  component_test_launch_death_tbb.launch  manager_test.launch  manager_test_subscribe.launch
src/cafer_server/: CMakeLists.txt  package.xml
src/cafer_server/conf/: cafer.launch
src/cafer_server/src/: getid.cpp  launch_node.cpp  node_manager.cpp
src/cafer_server/srv/: LaunchNode.srv
src/db_manager/: _db_filesystem.cpp  _wave.cpp  _write_worker.cpp  db_filesystem.cpp  db_manager.cpp  wave.cpp
src/test/: CMakeLists.txt  package.xml
src/test/launch/: cafer_client_test.launch  cafer_client_test_frequency10.launch  cafer_client_test_frequency20.launch  cafer_client_test_node_death.launch  cafer_client_test_node_launch_death.launch  cafer_client_test_node_launch_death_dummy_launch.launch  cafer_client_test_node_launch_death_tbb.launch
src/test/src/: cafer_client_test.cpp  cafer_client_test_node.cpp  cafer_client_test_node_death.cpp  cafer_client_test_node_launch_death.cpp  cafer_client_test_node_launch_death_tbb.cpp  cafer_client_test_node_send_chgt_freq.cpp  cafer_client_test_node_send_death.cpp
srv/: CleanNodeGroup.srv  GetID.srv  LaunchNode.srv  ReleaseNode.srv
test/: component_test.cpp  component_test_chgt_freq_node.cpp  component_test_death.cpp  component_test_death_node.cpp  component_test_launch_death.cpp  component_test_launch_death_tbb.cpp  component_test_node.cpp  manager_component_test.cpp  manager_test.cpp  manager_test_subscribe.cpp  manager_test_subscribe_node.cpp
test_launch/: component_test_death.launch  component_test_launch_death.launch  component_test_launch_death_dummy_node.launch  component_test_launch_death_tbb.launch  manager_component_test.launch  manager_test_subscribe.launch
(+9 files in other folders)
